--- a/FRONT-END/src/app/layout/topbar/topbar.component.html
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.html
@@ -8,4 +8,10 @@
     <i class="pi pi-sign-out"></i>
     Cerrar sesión
   </button>
+
+  <!-- Botón de usuario que muestra el overlay con la información -->
+  <button pButton pRipple icon="pi pi-user" style="color: #708090">
+    <i class="pi pi-user"></i>
+  </button>
+
 </header>
