--- a/FRONT-END/src/app/modules/credits/credits.component.html
+++ b/FRONT-END/src/app/modules/credits/credits.component.html
@@ -90,7 +90,7 @@
                     pButton pRipple icon="pi pi-times" 
                     class="p-button-rounded p-button-danger p-button-outlined p-button-sm" 
                     (click)="confirmCancelInstallment(item)"
-                    pTooltip="Anular abono"
+                    pTooltip="Anular Abono"
                     tooltipPosition="left">
             </button>
           </td>
