--- a/FRONT-END/src/app/modules/return-sale/return-sale.component.html
+++ b/FRONT-END/src/app/modules/return-sale/return-sale.component.html
@@ -10,7 +10,7 @@
   [actions]="true" 
   [canCancel]="true" 
   (cancel)="cancelSale($event)" 
-  [canChangeStatusSales]="true"
+  [canStatus]="true"
   [showStateColumn]="true" 
   [statusField]="'estado'" 
   (create)="openCreateModal()" 
