--- a/FRONT-END/src/app/modules/sales/sales.component.html
+++ b/FRONT-END/src/app/modules/sales/sales.component.html
@@ -52,30 +52,37 @@
     <div class="detalle-venta">
       <h2 class="texto-pequeno">Detalles de Venta</h2>
 
-      <div class="mb-3">
-        <p-checkbox [(ngModel)]="imprimirRecibo" [binary]="true" label="Imprimir Recibo"
-          styleClass="texto-pequeno"></p-checkbox>
+      <div class="flex align-items-center justify-content-between mb-4 p-3 bg-gray-50 rounded-lg">
+        <div class="flex align-items-center gap-2">
+          <i class="pi pi-print text-gray-600 text-xl"></i>
+          <span class="text-sm font-medium text-gray-700 mt-1">Imprimir Recibo</span>
+        </div>
+        <div class="ml-auto">
+          <p-inputSwitch [(ngModel)]="imprimirRecibo" styleClass="custom-switch"></p-inputSwitch>
+        </div>
       </div>
 
-      <div class="total-venta mb-3">
-        <h3 class="texto-pequeno">Total: {{total | currency:'USD':'symbol':'1.2-2'}}</h3>
+      <div class="mb-4 p-4 bg-blue-50 rounded-lg">
+        <div class="text-sm text-blue-600 mb-1">Total a Pagar</div>
+        <div class="text-2xl font-bold text-blue-700">
+          {{ total | currency:'USD':'symbol':'1.2-2' }}
+        </div>
       </div>
 
-      <button pButton label="Asignar Crédito" icon="pi pi-credit-card" (click)="showCreditAssignmentModal()"
-        class="p-button-secondary p-button-sm w-full mb-2 boton-pequeno"></button>
+      <button pButton label="Pago a Crédito" icon="pi pi-credit-card" (click)="showCreditAssignmentModal()"
+        class="p-button-info p-button-sm w-full mb-2 boton-pequeno"></button>
 
-      <button pButton label="Finalizar Venta" icon="pi pi-check" (click)="finalizeSale()"
-        class="p-button-success p-button-sm w-full mb-2 boton-pequeno"></button>
+      <button pButton label="Pago de Contado" icon="pi pi-check-circle" (click)="finalizeSale()"
+        class="p-button-success p-button-sm w-full mb-2 boton-pequeno" [style]="{'background': 'rgb(22 163 74)'}"></button>
 
-      <button pButton label="Cancelar" icon="pi pi-delete" (click)="cancelSale()"
+      <button pButton label="Cancelar" icon="pi pi-times-circle" (click)="cancelSale()"
         class="p-button-danger p-button-sm w-full boton-pequeno"></button>
+
     </div>
-
-
 
   </div>
 
-
+  <!------------------------- CREAR CRÉDITO ------------------------->
   <p-dialog header="Asignar Crédito" [(visible)]="showCreditModal" [style]="{width: '50vw'}" [modal]="true"
     styleClass="texto-pequeno">
     <div class="p-fluid">
@@ -88,18 +95,19 @@
             <div class="cliente-container">
               <p-autoComplete id="cliente" formControlName="cliente" [suggestions]="filteredCredits"
                 (completeMethod)="searchCreditClient($event)" (onSelect)="onClientSelect($event)" field="nombreCliente"
-                [dropdown]="true" placeholder="Buscar cliente" [style]="{'width':'calc(100% - 2.5rem)'}" styleClass="texto-pequeno">
+                [dropdown]="true" placeholder="Buscar cliente" [style]="{'width':'calc(100% - 2.5rem)'}"
+                styleClass="texto-pequeno">
                 <ng-template let-cliente pTemplate="item">
                   <div class="texto-pequeno">{{cliente.nombreCliente}} - CC {{cliente.cedulaCliente}}</div>
                 </ng-template>
               </p-autoComplete>
-              <button pButton pRipple type="button" icon="pi pi-plus"
+              <button pButton pRipple type="button" icon="pi pi-user-plus"
                 class="p-button-secondary p-button-success p-button-icon-only p-button reduce-margin"
-                style="padding: 0.75rem 3rem;" (click)="showClientModal = true"></button>
+                style="padding: 0.75rem 3rem;" (click)="showClientModal = true" pTooltip="Crear Cliente"></button>
             </div>
           </div>
         </div>
-        
+
         <!-- MODAL TO CREATE A CLIENT-->
         <p-dialog header="Agregar Cliente" [modal]="true" [(visible)]="showClientModal" [style]="{width: '500px'}">
           <ng-template pTemplate="content">
@@ -107,12 +115,13 @@
 
               <div class="field" [ngClass]="{'error': isFieldInvalid('cedulaCliente')}">
                 <label for="cedulaCliente">Cédula</label>
-                <input type="text" pInputText id="cedulaCliente" formControlName="cedulaCliente" maxlength="15" autofocus />
+                <input type="text" pInputText id="cedulaCliente" formControlName="cedulaCliente" maxlength="15"
+                  autofocus />
                 <small class="p-error" *ngIf="isFieldInvalid('cedulaCliente')">
                   {{ getErrorMessage('cedulaCliente') }}
                 </small>
               </div>
-        
+
               <div class="field-group">
                 <div class="field" [ngClass]="{'error': isFieldInvalid('nombreCliente')}">
                   <label for="nombreCliente">Nombre</label>
@@ -121,7 +130,7 @@
                     {{ getErrorMessage('nombreCliente') }}
                   </small>
                 </div>
-        
+
                 <div class="field" [ngClass]="{'error': isFieldInvalid('apellidoCliente')}">
                   <label for="apellidoCliente">Apellido</label>
                   <input type="text" pInputText id="apellidoCliente" formControlName="apellidoCliente" />
@@ -130,7 +139,7 @@
                   </small>
                 </div>
               </div>
-        
+
               <div class="field-group">
                 <div class="field" [ngClass]="{'error': isFieldInvalid('direccionCliente')}">
                   <label for="direccionCliente">Dirección</label>
@@ -139,7 +148,7 @@
                     {{ getErrorMessage('direccionCliente') }}
                   </small>
                 </div>
-        
+
                 <div class="field" [ngClass]="{'error': isFieldInvalid('telefonoCliente')}">
                   <label for="telefonoCliente">Teléfono</label>
                   <input type="text" pInputText id="telefonoCliente" formControlName="telefonoCliente" minlength="7"
@@ -154,8 +163,9 @@
 
           <ng-template pTemplate="footer">
             <button pButton label="Cancelar" icon="pi pi-times" (click)="cancelClientCreation()"
-            class="p-button-text custom-cancel-btn"></button>
-            <button pButton label="Guardar" icon="pi pi-check" (click)="saveClient()" class="p-button-text custom-save-btn"></button>
+              class="p-button-text custom-cancel-btn"></button>
+            <button pButton label="Guardar" icon="pi pi-check" (click)="saveClient()"
+              class="p-button-text custom-save-btn"></button>
           </ng-template>
 
         </p-dialog>
@@ -186,7 +196,7 @@
 
     <ng-template pTemplate="footer">
       <button pButton label="Cancelar" icon="pi pi-times" (click)="cancelarAsignacionCredito()"
-      class="p-button-text custom-cancel-btn"></button>
+        class="p-button-text custom-cancel-btn"></button>
       <button pButton label="Confirmar" icon="pi pi-check" (click)="addSaleToCredit()"
         class="p-button-text custom-save-btn"></button>
     </ng-template>
