--- a/FRONT-END/src/app/modules/sales/sales.component.css
+++ b/FRONT-END/src/app/modules/sales/sales.component.css
@@ -16,12 +16,37 @@
 
 .detalle-venta {
   flex: 1;
-  padding: 15px;
-  background-color: white;
   border: 1px solid #ddd;
-  display: flex;
-  flex-direction: column;
-  min-width: 250px;
+  border-radius: 0.6rem;
+  padding: 1rem;
+  min-width: 18rem; 
+  box-shadow: #dad8d8 0 0 10px;
+}
+
+
+:host ::ng-deep .p-button .p-button-icon {
+  font-size: 1.2rem;
+}
+
+:host ::ng-deep .p-card {
+  border-radius: 0.5rem;
+}
+
+/* Mejora de hover states */
+:host ::ng-deep .p-button-info:hover {
+  background: rgb(29 78 216) !important; /* dark blue */
+}
+
+:host ::ng-deep .p-button-success:hover {
+  background: rgb(21 128 61) !important; /* dark green */
+}
+
+:host ::ng-deep .p-button-danger:hover {
+  background: rgb(185 28 28) !important; /* dark red */
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .total-venta {
