--- a/FRONT-END/src/app/layout/topbar/topbar.component.html
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.html
@@ -1,17 +1,27 @@
 <header class="topbar">
-  <button (click)="toggleSidebarVisibility()" class="menu">
-    <i class="pi pi-bars"></i>
-  </button>
+  <button (click)="toggleSidebarVisibility()" class="menu"> <i class="pi pi-bars"></i> </button>
 
-  <!-- Botón de cerrar sesión alineado a la derecha -->
-  <button (click)="logout()" class="btn-logout">
-    <i class="pi pi-sign-out"></i>
-    Cerrar sesión
-  </button>
+  <button (click)="logout()" class="btn-logout"> <i class="pi pi-sign-out"></i> Cerrar sesión </button>
 
   <!-- Botón de usuario que muestra el overlay con la información -->
-  <button pButton pRipple icon="pi pi-user" style="color: #708090">
-    <i class="pi pi-user"></i>
+  <button pButton type="button" class="p-button-text" (click)="op.toggle($event)" icon="pi pi-user">
   </button>
 
+  <p-overlayPanel #op>
+    <ng-container *ngIf="userData">
+      <div class="user-info-container">
+        <div class="user-avatar-name">
+          <p-avatar icon="pi pi-user" [style]="{'background-color': '#2196F3', 'color': '#ffffff'}"
+            shape="circle">
+          </p-avatar>
+          <h3>{{userData.nombreUsuario}} {{userData.apellidoUsuario}}</h3>
+        </div>
+  
+        <div class="user-details">
+          <p>{{userData.correoUsuario}}</p>
+          <p class="user-role">{{userData.nombreRol}}</p>
+        </div>
+      </div>
+    </ng-container>
+  </p-overlayPanel>  
 </header>
