--- a/FRONT-END/src/app/layout/topbar/topbar.component.html
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.html
@@ -4,8 +4,14 @@
   <button (click)="logout()" class="btn-logout"> <i class="pi pi-sign-out"></i> Cerrar sesión </button>
 
   <!-- Botón de usuario que muestra el overlay con la información -->
-  <button pButton type="button" class="p-button-text" (click)="op.toggle($event)" icon="pi pi-user">
-  </button>
+  <button 
+  pButton 
+  type="button" 
+  class="p-button-text" 
+  (mouseenter)="op.show($event)" 
+  (mouseleave)="op.hide()" 
+  icon="pi pi-user">
+</button>
 
   <p-overlayPanel #op>
     <ng-container *ngIf="userData">
