--- a/FRONT-END/src/app/modules/shoppings/shopping.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shopping.component.html
@@ -34,11 +34,11 @@
             </ng-template>
             <ng-template pTemplate="body" let-item>
                 <tr>
-                    <td>{{ getProductName(item.idProducto) }} </td>
-                    <td>{{item.codigoBarra}}</td>
-                    <td>{{item.cantidadProducto}}</td>
-                    <td>{{item.precioCompraUnidad | currency}}</td>
-                    <td>{{item.subtotal | currency}}</td>
+                    <td>{{ item.nombreProducto }} </td>
+                    <td>{{ item.codigoBarra }}</td>
+                    <td>{{ item.cantidadProducto }}</td>
+                    <td>{{ item.precioCompraUnidad | currency }}</td>
+                    <td>{{ item.subtotal | currency }}</td>
                 </tr>
             </ng-template>
         </p-table>
