--- a/FRONT-END/src/app/modules/shoppinview/shoppinview.component.html
+++ b/FRONT-END/src/app/modules/shoppinview/shoppinview.component.html
@@ -4,10 +4,7 @@
     (search)="searchShopping($event)" (detail)="openShowModal($event)" (statusChange)="changeShoppingStatus($event)">
 </app-crud>
 
-<p-dialog [(visible)]="viewModal" [style]="{width: '600px'}" [modal]="true" class="p-fluid">
-    <ng-template pTemplate="header">
-        Detalles de la Compra
-    </ng-template>
+<p-dialog [(visible)]="viewModal" [style]="{width: '600px'}" [header]="'Detalle de Compra'" [modal]="true" class="p-fluid">
     <ng-template pTemplate="content">
         <!-- Tabla con los detalles de la compra -->
         <p-table [value]="shoppingdetails" [paginator]="true" [rows]="10">
